# spikuit

./: .gitignore  README.md  llms.txt  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/learn/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/spkt-ingest/: SKILL.md
.claude/skills/spkt-learn/: SKILL.md
.claude/skills/spkt-teach/: SKILL.md
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: README.ja.md  appendix.ja.md  appendix.md  cli.ja.md  cli.md  concepts.ja.md  concepts.md  getting-started.ja.md  getting-started.md  how-to-use.ja.md  how-to-use.md  index.ja.md  index.md  llms-full.txt  llms.txt
docs/appendix/: graph.ja.md  graph.md  implementation.ja.md  implementation.md  index.ja.md  index.md  neuroscience.ja.md  neuroscience.md  psychology.ja.md  psychology.md  retrieval.ja.md  retrieval.md  spaced-repetition.ja.md  spaced-repetition.md
docs/design/: amkb-adapter-v0.7.1.md  amkb-core-plumbing-spec.md  amkb-integration-plan.md  coaching-theory.md  exam-plan.md  quiz-v2.md
docs/javascripts/: charts.js
docs/rag/: quickstart.ja.md  quickstart.md
docs/reference/: circuit.md  config.md  embedder.md  index.ja.md  index.md  models.md  propagation.md  scaffold.md  sessions.md
docs/stylesheets/: charts.css
scripts/: build-llms-full.py  migrate_tataque.py  release.sh
spikuit-agents/: pyproject.toml
spikuit-agents/skills/: learn.md  qabot.md  spkt-curator.md  spkt-ingest.md  spkt-learn.md  spkt-qabot.md  spkt-teach.md  spkt-tutor.md  tutor.md
spikuit-agents/src/spikuit_agents/: __init__.py
spikuit-agents/src/spikuit_agents/amkb/: README.md  __init__.py  _bridge.py  _events.py  _ids.py  _loop.py  errors.py  mapping.py  store.py  transaction.py
spikuit-agents/src/spikuit_agents/tutor/: __init__.py  agent_grader.py
spikuit-agents/tests/: conftest.py  test_agent_grader.py  test_amkb_conformance.py
spikuit-agents/tests/adapter/: test_mapping.py  test_store.py  test_transaction.py
spikuit-agents/tests/conformance/: conftest.py  test_l1_core.py  test_l2_lineage.py  test_l4a_structural.py  test_l4b_intent.py
spikuit-cli/: README.md  pyproject.toml
spikuit-cli/src/spikuit_cli/: __init__.py  helpers.py  main.py
spikuit-cli/src/spikuit_cli/commands/: __init__.py  community.py  domain.py  extractor.py  git.py  neuron.py  skills.py  source.py  synapse.py
spikuit-cli/src/spikuit_cli/extractors/: __init__.py  availability.py  manifest.py  registry.py
spikuit-cli/src/spikuit_cli/quiz/: __init__.py  _content.py  base.py  flashcard.py  free_response.py  grader.py  models.py  tui.py
spikuit-cli/src/spikuit_cli/skills/learn/: SKILL.md
spikuit-cli/src/spikuit_cli/skills/qabot/: SKILL.md
spikuit-cli/src/spikuit_cli/skills/spkt-curator/: SKILL.md
spikuit-cli/src/spikuit_cli/skills/spkt-ingest/: SKILL.md
spikuit-cli/src/spikuit_cli/skills/spkt-ingest/extractors/_template/: README.md  SKILL.md  manifest.toml
spikuit-cli/src/spikuit_cli/skills/spkt-ingest/extractors/default/: SKILL.md  manifest.toml
spikuit-cli/src/spikuit_cli/skills/spkt-ingest/extractors/github-repo/: SKILL.md  manifest.toml
spikuit-cli/src/spikuit_cli/skills/spkt-ingest/extractors/pdf-paper/: SKILL.md  manifest.toml
spikuit-cli/src/spikuit_cli/skills/spkt-ingest/extractors/python-code/: SKILL.md  manifest.toml
spikuit-cli/src/spikuit_cli/skills/spkt-learn/: SKILL.md
spikuit-cli/src/spikuit_cli/skills/spkt-qabot/: SKILL.md
spikuit-cli/src/spikuit_cli/skills/spkt-teach/: SKILL.md
spikuit-cli/src/spikuit_cli/skills/spkt-tutor/: SKILL.md
spikuit-cli/src/spikuit_cli/skills/tutor/: SKILL.md
spikuit-cli/src/spikuit_cli/tutor/: __init__.py  builder.py  plan.py  session.py
spikuit-cli/tests/: test_extractors.py  test_free_response.py  test_git_commands.py  test_quiz.py  test_quiz_cli.py  test_quiz_tui.py  test_tutor.py
spikuit-core/: README.md  pyproject.toml
spikuit-core/src/spikuit_core/: __init__.py  circuit.py  config.py  db.py  embedder.py  errors.py  export.py  learn.py  models.py  propagation.py  quiz.py  scaffold.py  session.py  transactions.py  tutor.py
spikuit-core/src/spikuit_core/rag/: __init__.py  qabot.py
spikuit-core/tests/: test_amkb_schema.py  test_autoquiz.py  test_circuit.py  test_community.py  test_config.py  test_embedder.py  test_errors.py  test_event_emission.py  test_export_qabot.py  test_fire_hot_path.py  test_fsrs.py  test_learn.py  test_merge_lineage.py  test_minimal_install.py  test_propagation.py  test_prune_retired.py  test_qabot.py  test_quiz.py  test_retrieve.py  test_scaffold.py  test_session.py  test_soft_retire.py  test_source.py  test_stdp.py  test_transactions.py  test_tutor.py
src/spikuit/: __init__.py
