[project]
name = "spikuit"
version = "0.5.4"
description = "A knowledge base that gets smarter the more you use it"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "takyone", email = "takyone_dev@pm.me" },
]
keywords = ["spaced-repetition", "fsrs", "knowledge-graph", "rag", "learning", "ai-tutor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "spikuit-cli",
    "spikuit-core[engine]",
]

[project.urls]
Homepage = "https://takyone.github.io/spikuit/"
Documentation = "https://takyone.github.io/spikuit/"
Repository = "https://github.com/takyone/spikuit"
Issues = "https://github.com/takyone/spikuit/issues"
"LLMs (llms.txt)" = "https://takyone.github.io/spikuit/llms.txt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spikuit"]

[tool.uv.workspace]
members = [
    "spikuit-core",
    "spikuit-agents",
    "spikuit-cli",
]

[tool.uv.sources]
spikuit-core = { workspace = true }
spikuit-agents = { workspace = true }
spikuit-cli = { workspace = true }

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
    "mkdocstrings[python]>=1.0.3",
]
