[project]
name = "spikuit-agents"
version = "0.7.1"
description = "Strands-based agent workflows for Spikuit"
requires-python = ">=3.11"
dependencies = [
    "spikuit-core",
    "spikuit-cli",
    "amkb>=0.0.1,<0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spikuit_agents"]
