[project]
name = "spikuit-cli"
version = "0.5.2"
description = "CLI interface for Spikuit (spkt command)"
requires-python = ">=3.11"
dependencies = [
    "pyvis>=0.3.2",
    "spikuit-core[engine]",
    "typer>=0.24.1",
]

[project.scripts]
spkt = "spikuit_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spikuit_cli"]
