[project]
name = "spikuit-core"
version = "0.5.5"
description = "Core engine: FSRS scheduling + Knowledge Graph + Spreading Activation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
engine = [
    "aiosqlite>=0.20.0",
    "fsrs>=6.0.0",
    "msgspec>=0.19.0",
    "networkx>=3.2",
    "sqlite-vec>=0.1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spikuit_core"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
