[project]
name = "spikuit-core"
version = "0.6.3"
description = "Core engine: FSRS scheduling + Knowledge Graph + Spreading Activation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
engine = [
    "aiosqlite>=0.20.0",
    "fsrs>=6.0.0",
    "networkx>=3.2",
    "sqlite-vec>=0.1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spikuit_core"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
